# fig2json

./: Cargo.toml  README.md
src/: capi.rs  lib.rs
src/schema/: mod.rs  tree.rs
src/schema/transformations/: frame_properties_removal.rs  geometry_removal.rs  guid_path_removal.rs  guid_removal.rs  image_metadata_removal.rs  mod.rs  stroke_properties_removal.rs  style_extraction.rs  style_id_removal.rs  symbol_id_removal.rs  text_metadata_removal.rs  type_removal.rs
